[package]
name = "xdp-udp-echors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
xdp-udp-echors-common = { path = "../xdp-udp-echors-common", features = [
    "user",
] }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "xdp-udp-echors"
path = "src/main.rs"
